--- a/src/main/react/src/bootstrap.scss
+++ b/src/main/react/src/bootstrap.scss
@@ -19,3 +19,6 @@ $table-cell-padding-top-bottom:       13px;
 $table-cell-padding:                  $table-cell-padding-top-bottom;
 
 $btn-default-color:                   #7E8FA9;
+
+$label-success-bg:                    #3BD311;
+$label-danger-bg:                     #FF3F52;
