Add modal and spinner to test-steps

--- a/src/main/react/src/bootstrap.scss
+++ b/src/main/react/src/bootstrap.scss
@@ -24,3 +24,6 @@ $btn-default-color:                   #7E8FA9;
 
 $brand-success:                       #3BD311;
 $brand-danger:                        #FF3F52;
+
+$modal-inner-padding:                 10px;
+$modal-title-padding:                 10px;
