--- a/src/main/react/src/bootstrap-customizations.scss
+++ b/src/main/react/src/bootstrap-customizations.scss
@@ -107,3 +107,9 @@ table > tbody > tr > td {
 .pagination {
   margin: 10px 0;
 }
+
+.modal-content {
+  border-radius: 2px;
+
+  @include box-shadow(0px 2px 4px 0px rgba(0,0,0,0.06));
+}
