Add test runs page; Minor fixes to components

--- a/src/main/react/src/bootstrap-customizations.scss
+++ b/src/main/react/src/bootstrap-customizations.scss
@@ -109,7 +109,7 @@ table > tbody > tr > td {
 .pagination {
   margin: 10px 0;
 
-  li.active {
+  li.active, li.disabled {
     pointer-events: none;
   }
 }
