--- a/src/main/react/src/bootstrap-customizations.scss
+++ b/src/main/react/src/bootstrap-customizations.scss
@@ -100,6 +100,7 @@ table > tbody > tr > td {
 .label {
   font-size: 13px;
   font-weight: 500;
+  border-radius: 2px;
 
   .glyphicon {
     top: 2px;
