Add bootstrap configuration; Add test suite chart

--- a/src/main/react/src/app.scss
+++ b/src/main/react/src/app.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 @import 'bootstrap-customizations';
+@import './test-runs/trending-section-chart';
 
 // TODO(kklisura): Move this to its own file.
 .filter-section {
