Add text to spinner

--- a/src/main/react/components/Spinner/style.css
+++ b/src/main/react/components/Spinner/style.css
@@ -52,3 +52,11 @@
     -webkit-transform: scaleY(1.0);
   }
 }
+
+.loadingText {
+  margin-top: 10px;
+  width: 90px;
+  margin-left: -25px;
+  font-size: 11px;
+  color: #9098a3;
+}
