--- a/src/main/react/src/test-steps/table.css
+++ b/src/main/react/src/test-steps/table.css
@@ -3,5 +3,7 @@
   max-width: 150px;
   white-space: nowrap;
   overflow: hidden;
-  float:left
+  float: left;
+  margin-right: 20px;
+  margin-bottom: -20px;
 }
