Add support for bug reporting/linking

--- a/src/main/react/src/components/TestSteps/TestStepsTable/style.css
+++ b/src/main/react/src/components/TestSteps/TestStepsTable/style.css
@@ -14,3 +14,13 @@
   float: right;
   margin-top: 3px;
 }
+
+.bugIcon {
+  cursor: pointer;
+  float: right;
+  margin-top: 3px;
+}
+
+.bugTrackingColumn {
+  width: 110px;
+}
