--- a/src/main/react/src/styles/app.scss
+++ b/src/main/react/src/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'bootstrap-customizations';
 @import 'trending-section-chart';
 @import 'select-customizations';
+@import '../fonts/fonts';
 
 // TODO(kklisura): Move this to its own file.
 .filter-section {
