--- a/src/main/react/src/styles/bootstrap-customizations.scss
+++ b/src/main/react/src/styles/bootstrap-customizations.scss
@@ -7,7 +7,8 @@
 // -----------------------------------------------------------------------------
 
 // Left right padding on navbar
-$navbar-padding-left-right:         40px;
+$navbar-padding-left-right:         16px;
+$padding-top:                       23px;
 
 $table-fouces-td-color:             #364962;
 $table-td-color:                    #7E8FA9;
@@ -19,10 +20,22 @@ $active-link-color:                 #1372FC;
 // -----------------------------------------------------------------------------
 
 .navbar-fixed-top {
-  padding-left: $navbar-padding-left-right;
+  // padding-left: $navbar-padding-left-right;
   padding-right: $navbar-padding-left-right;
 
   @include box-shadow(0px 2px 4px 0px rgba(0,0,0,0.1));
+}
+
+.navbar-brand{
+  padding: $padding-top 15px;
+  white-space: nowrap; 
+  width: 12em; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
+.navbar-nav > li > a{
+  padding-top: $padding-top;
 }
 
 .table {
